fix slide in menu displaying on mobile

--- a/src/css/themes/dark-theme.scss
+++ b/src/css/themes/dark-theme.scss
@@ -34,6 +34,7 @@ header {
   transition:margin-left 0.3s ease-in-out;
   padding-left:1px;
   margin-top:-1px;
+  padding-top:3px;
 }
 
 .slideOut {
