--- a/src/css/themes/light-theme.scss
+++ b/src/css/themes/light-theme.scss
@@ -33,6 +33,7 @@ header {
   transition:margin-left 0.4s ease-in-out;
   padding-left:1px;
   margin-top:-1px;
+  padding-top:3px;
 }
 
 .slideOut {
